# classical-volatility-benchmarks

./: .gitignore  PYPI_README.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: generate-results.yml  tests.yml
docs/results/: README.md  all_statistical_tests.csv  average_model_ranks.csv  sensitivity_results.csv
docs/results/sensitivity_runs/window_10_alpha_0p01_train_0p6/: all_forecast_metrics.csv  all_risk_metrics.csv  all_statistical_tests.csv
docs/results/sensitivity_runs/window_10_alpha_0p01_train_0p7/: all_forecast_metrics.csv  all_risk_metrics.csv  all_statistical_tests.csv
docs/results/sensitivity_runs/window_10_alpha_0p01_train_0p8/: all_risk_metrics.csv  all_statistical_tests.csv
docs/results/sensitivity_runs/window_10_alpha_0p025_train_0p6/: all_risk_metrics.csv  all_statistical_tests.csv
docs/results/sensitivity_runs/window_10_alpha_0p025_train_0p7/: all_forecast_metrics.csv  all_risk_metrics.csv  all_statistical_tests.csv
docs/results/synthetic_regime_garch/: risk_metrics.csv  statistical_tests.csv
docs/results/synthetic_rough_long_memory/: forecast_metrics.csv  risk_metrics.csv  statistical_tests.csv
docs/results/synthetic_sv_jump_t/: risk_metrics.csv
examples/: run_classical_volatility_benchmarks.py
scripts/: commit_results_to_github.sh
src/volatility_benchmark_suite/: __init__.py
tests/: test_benchmark_smoke.py
tools/: fix_heatmap_label_visibility.py  rebuild_heatmaps_80pct.py  refine_readme_discussion.py  update_readme_from_existing_results.py
(+317 files in other folders)
