[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classical-volatility-benchmarks"
version = "0.1.0"
description = "Classical volatility forecasting, realized GARCH, risk metrics, visualization, and sensitivity benchmark."
readme = "PYPI_README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Aryan Bhambu"},
]
keywords = [
    "volatility forecasting",
    "realized volatility",
    "GARCH",
    "realized GARCH",
    "VaR",
    "Expected Shortfall",
    "CRPS",
    "sensitivity analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "statsmodels>=0.14",
    "arch>=6.0",
    "yfinance>=0.2",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "build>=1.0",
    "twine>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
